[project]
name = "proschedio"
version = "0.1.0"
description = ""
authors = [
    {name = "Siyoung September",email = "loldruger@gmail.com"}
]
packages = [
    { include = "proschedio", from = "src" },
    { include = "vultr", from = "src" },
    { include = "aws", from = "src" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.11.11,<4.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
colorlog = "^6.9.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
