[project]
name = "proschedio"
version = "0.1.0"
description = ""
authors = [
    {name = "Siyoung September",email = "loldruger@gmail.com"}
]
# The 'packages' key is typically not needed with setuptools in [project]
# setuptools auto-discovery or [tool.setuptools.packages.find] can be used if needed.
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11,<4.0.0", # Adjusted syntax slightly for broader compatibility
    "python-dotenv>=1.0.0" # Add python-dotenv
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "colorlog>=6.9.0",
    "pytest-dotenv>=0.5.2" # Add pytest-dotenv
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "integrated_test.py"]
python_functions = "test_*"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
